Fix menu collapse look

--- a/src/main.css
+++ b/src/main.css
@@ -134,6 +134,7 @@ button:active {
 }
 
 #navbar {
+  position: relative;
   border-top: var(--border-color) 2px solid;
   border-left: var(--border-color) 2px solid;
   border-bottom: var(--border-color) 2px solid;
@@ -160,12 +161,24 @@ button:active {
   align-items: center;
   gap: 6px;
   margin-bottom: 4px;
+  margin-left: 30px;
+}
+
+#menu-buttons.collapsed {
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 6px;
+  margin-left: 0;
+  margin-top: 34px;
 }
 
 #menu-button {
   cursor: pointer;
   display: flex;
   align-items: center;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
 
 #gear-button {
